update config and create new post

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://sivori.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sivori
 github_username:  sivori
+permalink: /:categories/:year/:month/:day/:title:output_ext
 
 # Build settings
 theme: minima
